--- a/index.html
+++ b/index.html
@@ -1,21 +1,44 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-    <link rel="manifest" href="/site.webmanifest">
-    <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-    <meta name="apple-mobile-web-app-title" content="Frequent Transactions">
-    <meta name="application-name" content="Frequent Transactions">
-    <meta name="msapplication-TileColor" content="#00a300">
-    <meta name="theme-color" content="#ffffff">
-    <title>Frequent Transactions for YNAB</title>
-  </head>
-  <body>
-    <div id="app"></div>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+
+<head>
+  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png" />
+  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png" />
+  <link rel="manifest" href="/site.webmanifest" />
+  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5" />
+
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="apple-mobile-web-app-title" content="Frequent Transactions" />
+  <meta name="application-name" content="Frequent Transactions" />
+  <meta name="msapplication-TileColor" content="#00a300" />
+  <meta name="theme-color" content="#ffffff" />
+
+  <!-- Primary Meta Tags -->
+  <meta name="title" content="Frequent Transactions for YNAB" />
+  <meta name="description" content="Simple logging of frequent but non-recurrent transactions in YNAB." />
+
+  <!-- Open Graph / Facebook -->
+  <meta property="og:type" content="website" />
+  <meta property="og:url" content="https://tg2648.github.io/frequent-transactions/" />
+  <meta property="og:title" content="Frequent Transactions for YNAB" />
+  <meta property="og:description" content="Simple logging of frequent but non-recurrent transactions in YNAB." />
+  <meta property="og:image" content="https://tg2648.github.io/frequent-transactions/frequent-transactions.png" />
+
+  <!-- Twitter -->
+  <meta property="twitter:card" content="summary_large_image" />
+  <meta property="twitter:url" content="https://tg2648.github.io/frequent-transactions/" />
+  <meta property="twitter:title" content="Frequent Transactions for YNAB" />
+  <meta property="twitter:description" content="Simple logging of frequent but non-recurrent transactions in YNAB." />
+  <meta property="twitter:image" content="https://tg2648.github.io/frequent-transactions/frequent-transactions.png" />
+
+  <title>Frequent Transactions for YNAB</title>
+</head>
+
+<body>
+  <div id="app"></div>
+  <script type="module" src="/src/main.js"></script>
+</body>
+
 </html>
